--- a/4thSemester/func/W6.md
+++ b/4thSemester/func/W6.md
@@ -8,7 +8,7 @@ _Def._ Kategoria $C$
   - $f \in morf(C)$
   - $dom(f), codom(f) \in ob(C)$
 - mamy złożenie $\circ$ morfizmów:
-  - $X -f-> Y -g-> Z, X - g\circ f -> Z$
+  - $X \xrightarrow{f} Y \xrightarrow{g} Z, X \xrightarrow{g \circ f} Z$
   - złożenie jest łączne
 - dla każdego $X \in obj(C)$ istnieje dokładnie jeden $id_X:X \rightarrow X$
   - $(\forall f:X \rightarrow Y)(f \circ id_X = f)$
