func notes correction

--- a/4thSemester/func/W6.md
+++ b/4thSemester/func/W6.md
@@ -88,5 +88,5 @@ $f: X \rightarrow Y \\$
 $W_M(f) : X \times M \rightarrow Y \times M \\$
 $(W_M(f))(x,m) = (f(x), m)$
 
-$F(f) \approx fmap f \\$
-$(F(f))(x) \leadsto fmap f x$
+$F(f) \approx \texttt{fmap f} \\$
+$(F(f))(x) \leadsto \texttt{fmap f x}$
