--- a/4thSemester/func/W7.md
+++ b/4thSemester/func/W7.md
@@ -47,15 +47,17 @@ $ST_S(f): ST_S(X) \rightarrow ST_S(Y)$
 
 $\alpha \in (X \times S)^S$
 
+```haskell
 fmap f St(a) = 
     St (\s -> let (x,t) = a s 
         (fx, t))
+```
 
 ## Typy rekurencyjne
 
 data STree a = Leaf f | Node (STree a) (STree a)
 
-$F(X) = (Leaf Int) \cup (Node X X) = Int + X \times X$
+$F(X) = \texttt{(Leaf Int)} \cup \texttt{(Node X X)} = Int + X \times X$
 
 $F(\emptyset) = Int \\ F(F(\emptyset)) = Int + (Int \times Int) \\$
 $F^3(\emptyset) = Int + (Int \times Int) + Int \times (Int \times Int) + (Int \times Int) \times Int + ((Int \times Int) \times (Int \times Int)) \\$
