--- a/4thSemester/func/W9.md
+++ b/4thSemester/func/W9.md
@@ -1,7 +1,7 @@
 # Naturalne Transformacje
 
 $VS: Set \rightarrow Set \\
-V2(X) = X \times X
+V2(X) = X \times X \\
 (V2(f:X \rightarrow Y))((x_1, x_2)) = (f(x_1), f(x_2))$
 
 ```haskell
